# LLMSwitch

./: README.md  pyproject.toml
src/llmswitch/: __init__.py  client.py  config.py  errors.py  logger.py  rate_limit.py
tests/: test_client.py
