[project]
name = "llmswitch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Heshinth P", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
