[project]
name = "llmswitch"
version = "0.1.0"
description = "Dynamic rate-limit router for OpenAI-compatible LLM endpoints"
readme = "README.md"
authors = [
    { name = "Heshinth P", email = "heshinth@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
